--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <link rel="stylesheet" type="text/css" href = "style.css">
 </head>
 <body>
-  <h1>Pedro caminhão-pipa</h1>
+  <form action="chamar_cara.php" method="POST" accept-charset="utf-8">
+    <label><input type="text" name="numero" value=""></label>
+    <label><input type="text" name="mensagem" value=""></label>
+    <input type="submit" name="" value="">
+  </form>
+
 </body>
 </html>
