--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <label><input type="text" name="mensagem" value=""></label>
     <input type="submit" name="" value="">
   </form>
-
+<script src = "mensagem.js"></script>
 </body>
 </html>
