alteração em linha

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href = "style.css">
 </head>
 <body>
-  <form action="" method="POST" accept-charset="utf-8">
+  <form action="" method="" accept-charset="utf-8">
     <label><input type="text" name="numero" value=""></label>
     <label><input type="text" name="mensagem" value=""></label>
     <input type="submit" name="" value="">
