--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<style>
+		.centralizar{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
+		#divf{
+			
+			height: 80%;
+			width: 80%;	
+		}
+		#divf > img{
+			height: 60%;
+			width: 40%;
+		}
+		#divf > h2{
+			top: 0;					
+		}
+		#divf > p{
+			top: 25px;					
+		}
+	</style>
 </head>
 <body>
-	<p>Minha Calculadora
-	 <a href="https://xyborges.github.io/myspace/calculadora.html">Aqui</a>.
-	</p>
+	
+	<div class = "centralizar" id = "divf">
+		<h2 class = "centralizar" >Olá, sou João</h2>
+		<img class = "centralizar" src="https://media.tenor.com/hndU2Z9jLtwAAAAM/smurf.gif">
+		<p class = "centralizar" >😁👍</p>
+	</div>
 </body>
 </html>
