--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<?php
-include 'checkserver.php';
-?>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,3 +38,18 @@ include 'checkserver.php';
 	</div>
 </body>
 </html>
+<script>
+        function registrarVisita() {
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "checkserver.php", true);
+            xhr.onload = function() {
+                if (xhr.status == 200) {
+                    console.log(xhr.responseText);
+                }
+            };
+            xhr.send();
+        }
+
+ 
+        registrarVisita();
+</script>
