--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 	<div class = "centralizar" id = "divf">
 		<h2 class = "centralizar" >Olá, sou João</h2>
-		<img class = "centralizar" src="https://media.tenor.com/hndU2Z9jLtwAAAAM/smurf.gif">
+		<img class = "centralizar" src="img.jfif">
 		<p class = "centralizar" >😁👍</p>
 	</div>
 </body>
