--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+	<style>
+		.centralizar{
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+		}
+		img{
+			width: 70vh;
+			height: 70vh;
+		}
+	</style>
+</head>
+<body>
+	
+	<div class = "centralizar" id = "divf">
+		<img src="immg.jpeg">
+	</div>
+</body>
+</html>
+<script>
+</script>
