--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			transform: translate(-50%, -50%);
 		}
 		img{
-			width: 70vh;
-			height: 70vh;
+			width: 90%;
+			height: 90%;
 		}
 	</style>
 </head>
