--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 			left: 50%;
 			top: 50%;
 			transform: translate(-50%, -50%);
+			width: 40vh;
+			height:  40vh;
+		
 		}
 		img{
-			width: 80%;
-			height: 80%;
+			width: 100%;
+			height: 100%;
 		}
 	</style>
 </head>
